# seacharts

./: .gitignore  LICENSE  README.md  conda_requirements.txt  config.ini  enc.py  pyproject.toml  requirements.txt  setup.cfg  setup.ps1  setup.py
.github/workflows/: python-publish.yml
data/: config.ini  ships.csv  vessels.csv
data/paths/: path2.csv
data/settings/: config.ini
enc/: __init__.py  enc.py  feature.py  parser.py  region.py  shapes.py
files/: shapefile.py
seacharts/: __init__.py  config.ini  config.yaml  config_schema.yaml  enc.py  feature.py  layer.py  parser.py  region.py  seacharts.py  settings.py
seacharts/core/: __init__.py  config.py  extent.py  files.py  mapFormat.py  parser.py  parserFGDB.py  parserS57.py  paths.py  scope.py  time.py  weatherManager.py
seacharts/data/: config.py  files.py  parser.py  paths.py
seacharts/display/: __init__.py  colors.py  display.py  events.py  features.py  map.py
seacharts/environment/: __init__.py  collection.py  environment.py  extent.py  extra.py  feature.py  map.py  scope.py  shapes.py  user.py  weather.py
seacharts/features/: __init__.py  agents.py  details.py  feature.py  features.py  layers.py  ocean.py  shapes.py  surface.py
seacharts/files/: __init__.py  filegdb.py  parser.py  shapefile.py
seacharts/layers/: __init__.py  labels.py  layer.py  layers.py  locations.py  regions.py  types.py
seacharts/parser/: __init__.py  parser.py
seacharts/shapes/: __init__.py  areas.py  bodies.py  lines.py  shape.py  shapes.py  types.py
seacharts/spatial/: __init__.py  base.py  hypsometry.py  layers.py  map.py  shapes.py  spatial.py  user.py  weather.py
seacharts/utilities/: config.py  files.py  paths.py
seacharts/utils/: __init__.py  config.py  files.py  parser.py  paths.py
tests/: config_classic.yaml  config_sc4.yaml  test_seacharts.py  test_seacharts_4_0.py
user_doc/: seacharts_user_doc.md
