[project]
name = "seacharts"
version = "2.0.0"
description = "Fork of simbli/seacharts compatible with Python <=3.11 and the colav-simulator"
readme = "README.md"
authors = [
    {name = "Trym Tengesdal", email = "tengesdal1994@gmail.com"},
    {name = "Simon Blindheim", email = "simon.blindheim@ntnu.no"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
license = {file = "LICENSE"}
requires-python = ">=3.11,<3.12"
dependencies = [
    "cartopy>=0.25.0",
    "cerberus>=1.3.8",
    "fiona>=1.10.1",
    "gdal>=3.12.0.post1",
    "matplotlib>=3.10.7",
    "matplotlib-scalebar>=0.9.0",
    "numpy>=2.3.5",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]


