[metadata]
name = seacharts
version = 1.0.1
author = Simon Blindheim
author_email = simon.blindheim@ntnu.no
description = API for Electronic Navigational Charts (ENC)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simbli/seacharts
keywords =
    api
    ships
    sea charts
    visualization
    electronic navigational charts
project_urls =
    Bug Tracker = https://github.com/simbli/seacharts/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
package_dir =
    '' = seacharts
packages = find:
python_requires = >=3.9
test_suite = tests

[options.package_data]
seacharts = config.ini
