[metadata]
name = seacharts
version = 0.0.1
author = Simon Blindheim, Trym Tengesdal
author_email = simon.blindheim@ntnu.no
description = Electronic navigational charts (ENCs) processing/display project forked from https://github.com/simbli/seacharts
url = https://github.com/trymte/seacharts
long_description = file: README.md, LICENSE
long_description_content_type= text/markdown
keywords = api, ships, sea charts, visualization, electronic navigational charts
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/trymte/seacharts/issues

[options]
package_dir =
  '' = seacharts
packages = find:
install_requires =
    numpy
    matplotlib
    scipy
    gdal==3.4.1
    fiona
    cartopy
python_requires = >=3.8
test_suite = tests

[options.package_data]
seacharts = config.ini