[metadata]
name = seacharts
version = 3.0.0
author = Simon Blindheim, Trym Tengesdal
author_email = simon.blindheim@ntnu.no
description = Electronic navigational charts (ENCs) processing & visualization
url = https://github.com/simbli/seacharts
long_description = file: README.md, LICENSE
long_description_content_type= text/markdown
keywords = api, ships, sea charts, visualization, electronic navigational charts
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://github.com/simbli/seacharts/issues

[options]
package_dir =
  '' = seacharts
packages = find:
install_requires =
    numpy
    gdal
    fiona
    cartopy
    shapely
    matplotlib
    matplotlib_scalebar
    cerberus
    pyyaml
    requests
    pyproj
python_requires = >=3.11
test_suite = tests

[options.package_data]
seacharts = *.yaml